<resources>
    <string name="app_name">AgriShare</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_font">fonts/TradeGothicLTCom.ttf</string>
    <string name="default_font_bold">fonts/TradeGothicLTComBold.ttf</string>
    <string name="default_font_semibold">fonts/TradeGothicLTComBold.ttf</string>
    <string name="english">English</string>
    <string name="shona">Shona</string>
    <string name="ndebele">Ndebele</string>
    <string name="css_content" formatted="false">
            <![CDATA[
                   <style type="text/css">
                      @font-face {font-family: helvetica;  src: url(\'file:///android_asset/fonts/TradeGothicLTCom.ttf\'); }
            html, body { margin: 0; padding: 0; }
            body { font: normal 1em arial; color: #333333; line-height: 1.5; font-family: helvetica; padding-bottom: 50px;}
            h1 { font-weight: normal; font-size: 1.6em; color: #3EA243; }
            h2 { font-size: 1.2em; color: #000000; }
            h1, h2, ul, ol, p { margin: 1em 20px; }
            img { display: block; width: auto; margin: 1em 0; height: auto 100%; max-width: 100%; }
            img.hero { margin: 0; }
            div.heroDiv { height: 250px; overflow: hidden; }
            .heroDiv img.hero { height: initial;}
            p.caption { color: #999999; font-style: italic; }
            span.ref { background: #c6e3c5; padding: 3px 5px; border-radius: 2px; }
            table { width: 100%; border: 0; border-collapse: collapse; margin: 1em 0; border-top: solid 1px #eeeeee; margin: 20;}
            th, td { padding: 20px 10px; border-bottom: solid 1px #eeeeee; text-align: left; vertical-align: top; }
            th:first-child, td:first-child { padding-left: 20px; }
            th:last-child, td:last-child { padding-right: 20px; }
            th.rgt, td.rgt { text-align: right; }
            th { font-size: .8em; text-transform: uppercase; background: #eeeeee; }
            tr.hdr td { background: #fafafa; padding: 10px 20px; font-weight: bold; font-size: .8em;  }
            tr.bold { font-weight: bold; }
            td.fill { background-color: #cccccc; }
            table.calendar, table.small { font-size: .8em; }
            table.calendar td, table.calendar th { padding: 5px !important; border: solid 1px #eee; }
            td.indent { padding-left: 40px; }
            a { color: inherit; text-decoration:none; }
            a.disabled { pointer-events: none; }
        </style>
            ]]>
        </string>
    <string name="retry">Retry</string>
    <string name="title_activity_splash">AgriShare</string>
    <string name="welcome_to">Welcome to</string>
    <string name="splash_intro">The App that connects you to \nfarming equipment.</string>
    <string name="register_and_login">Register and login with your phone number.</string>
    <string name="get_started">Get Started</string>
    <string name="terms_of_use_privacy_policy">Terms of Use / Privacy Policy</string>
    <string name="registered_users_login_here">Registered users login here</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="register">Register</string>
    <string name="title_activity_cell_number">CellNumberActivity</string>
    <string name="whats_your_cell">What\'s your cell number?</string>
    <string name="will_check_to_see_if_you_already">We\'ll check to see if you already have an account.</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">Welcome</string>
    <string name="please_complete_the_rest">Please complete the rest of the fields to register today.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="pin">PIN</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="error_field_required">This field is required!</string>
    <string name="error_total_volume_has_to_be_greater_than_0">Volume has to be greater than 0</string>
    <string name="error_minimum_field_size_required_is_0_5ha">Minimum field size accepted is 0.5ha</string>
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="phone_number_too_short">Phone number too short!</string>
    <string name="minimum_distance_required_is_10">Minimum distance required is 10km!</string>
    <string name="error_distance_charge_too_high">Distance charge should not be more than $5</string>
    <string name="error_hours_too_high">Hours required should not be more than 10</string>
    <string name="error_size_too_low">Minimum size should be at least 0.5</string>
    <string name="error_size_too_high">Minimum size should not be more than 100</string>
    <string name="error_hire_cost_too_high">Hire Cost should be less than $500</string>
    <string name="error_fuel_cost_too_high">Fuel Cost should be less than $50</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="verification">Verification</string>
    <string name="pin_updated">Pin updated</string>
    <string name="your_pin_has_been_updated">Your pin has been updated. Tap the button below to proceed.</string>
    <string name="enter_code_from_sms">Please enter the 4-digit code that was sent to your number by SMS.</string>
    <string name="sms_code">SMS code</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_privacy_policy">Terms of Use &amp; Privacy Policy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="please_enter_your_pin">Please enter your PIN\nto login</string>
    <string name="login_intro">Enter the cell number you used at registration and your PIN.</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="login">Login</string>
    <string name="i_have_read_and_agreed">I have read and agreed to the <u>terms and conditions</u> and <u>privacy policy</u>.</string>
    <string name="title_activity_forgot_pin">ForgotPinActivity</string>
    <string name="enter_cell">Please enter your cell number and we\'ll send you a verification code.</string>
    <string name="forgot_pin2">Forgot PIN</string>
    <string name="send">Send</string>
    <string name="title_activity_change_pin">ChangePinActivity</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_pin_intro">Please enter the 4-digit code that was sent via SMS and your new password.</string>
    <string name="update">Update</string>
    <string name="new_pin">New PIN</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="reset_pin">Reset PIN</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="about_agrishare">About AgriShare</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="edit_profile_intro">Complete your profile information using the form below.</string>
    <string name="save">Save</string>
    <string name="title_activity_notification_preferences">NotificationPreferencesActivity</string>
    <string name="notification_prefs_intro">Choose how you would like to receive notifications about orders.</string>
    <string name="sms">SMS</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email">Email</string>
    <string name="faqs_intro">Check out the articles below to find our more about AgriShare and how to use the app.</string>
    <string name="title_activity_faqs">FAQsActivity</string>
    <string name="title_activity_faqs_detail">FAQsDetailActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="contact_us_intro">Get in touch with the AgriShare team. We\'ll  send your name and telephone number too. </string>
    <string name="your_message">Your message</string>
    <string name="seeking">Seeking</string>
    <string name="offering">Offering</string>
    <string name="seeking_intro">Renting services is quick and easy. Just follow these four simple steps and get started today.</string>
    <string name="choose_tractor_lorry_or_processing">Choose tractor, lorry or processing</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="choose_service_and_pay">Choose service and pay with EcoCash</string>
    <string name="services_will_be_delivered">Service will be delivered</string>
    <string name="offering_intro">Offering services is quick and easy. Just follow these four simple steps and get started today.</string>
    <string name="add_your_equipment_and_enter_info">Add your equipment and enter the information required</string>
    <string name="confirm_bookings_you_receive">Confirm bookings you receive</string>
    <string name="provide_the_service">Provide the service</string>
    <string name="receive_your_payment">Receive your payment</string>
    <string name="find_services">Find Services</string>
    <string name="tractors">Tractors</string>
    <string name="lorries">Lorries</string>
    <string name="processing">Processing</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="view_availability">View Availibility</string>
    <string name="me">Me</string>
    <string name="a_friend">A friend</string>
    <string name="a_group">A group</string>
    <string name="renting_for">Renting for:</string>
    <string name="location">Location</string>
    <string name="my_current_location">My current location</string>
    <string name="choose_location_on_map">Choose location on map</string>
    <string name="booking_information">Booking Information</string>
    <string name="type_of_service">Type of service</string>
    <string name="field_size">Field size (hectares)</string>
    <string name="include_fuel">Include fuel</string>
    <string name="enable_ploughing">Enable Ploughing</string>
    <string name="set_your_booking_info">Set your booking information</string>
    <string name="hours_required_per_hectare">Hours required per hectare</string>
    <string name="hire_cost">Hire cost</string>
    <string name="fuel_cost">Fuel cost</string>
    <string name="minimum_field_size">Minimum field size</string>
    <string name="distance_charge">Distance charge</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="hrs">HRS</string>
    <string name="dollar_per_ha">$/HA</string>
    <string name="dollar_per_km">$/KM</string>
    <string name="ha">HA</string>
    <string name="km">KM</string>
    <string name="learn_more">Learn more</string>
    <string name="total_volume">Total volume</string>
    <string name="ton">TON</string>
    <string name="is_service_mobile">Is service mobile?</string>
    <string name="service_complete">Service Complete</string>
    <string name="payment_received_by_agrishare">Payment Received by AgriShare</string>
    <string name="your_payment_will_be_held">Your payment will be held by AgriShare and released to the supplier once the service is complete.</string>
    <string name="very_good">Very Good</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
</resources>