<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.equipment.ServiceFormActivity"
    tools:showIn="@layout/activity_ploughing"
    android:background="@color/page_bg_grey">

    <ScrollView
        style="@style/scrollview">

        <LinearLayout
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:paddingBottom="100sp"
            style="@style/scrollview_linear_layout">

            <RelativeLayout
                style="@style/fake_edittext_row_container">

                <ImageView
                    android:id="@+id/sms_icon"
                    android:src="@drawable/about_icon_60"
                    style="@style/field_icon"/>

                <app.fonts.SourceSansProRegularTextView
                    android:id="@+id/enable_text"
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@+id/sms_icon"
                    android:text="@string/enable_ploughing"
                    style="@style/form_value_textview" />

                <Switch
                    android:id="@+id/ploughing_switch"
                    style="@style/notifications_prefs_switch" />

            </RelativeLayout>

            <app.fonts.SourceSansProRegularTextView
                android:text="@string/set_your_booking_info"
                style="@style/intro_textview" />

            <RelativeLayout
                android:layout_marginTop="0sp"
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/hours_required_per_hectare"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/hours_required_per_hectare"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/hrs"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/hire_cost"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/hire_cost"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/dollar_per_ha"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/fuel_cost"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/fuel_cost"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/dollar_per_km"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/minimum_field_size"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/minimum_field_size"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/ha"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/distance_charge"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionNext"
                    android:hint="@string/distance_charge"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/dollar_per_km"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/edittext_container">

                <EditText
                    android:id="@+id/maximum_distance"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:hint="@string/maximum_distance"
                    style="@style/space_for_icon_edittext_with_right_padding" />

                <ImageView
                    android:src="@drawable/pink_arrow"
                    style="@style/field_icon"  />

                <app.fonts.SourceSansProBoldTextView
                    android:text="@string/km"
                    style="@style/field_unit_textview" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        style="@style/button" />

    <include
        android:id="@+id/feedback"
        layout="@layout/common_feedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
