<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <app.fonts.SourceSansProRegularTextView
        android:text="@string/set_your_booking_info"
        android:layout_marginBottom="0sp"
        style="@style/intro_textview" />

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/is_service_mobile_label"
        android:text="@string/is_service_mobile"
        style="@style/form_label"/>

    <RelativeLayout
        android:id="@+id/mobile_container"
        style="@style/fake_edittext_row_container">

        <ImageView
            android:id="@+id/mobile_icon"
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"/>

        <app.fonts.SourceSansProRegularTextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/mobile_icon"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:text="@string/is_service_mobile"
            android:layout_marginLeft="-10sp"
            style="@style/form_value_textview" />

        <ImageView
            android:id="@+id/mobile_arrow"
            android:src="@drawable/arrow_down"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8sp"
            style="@style/icon" />

    </RelativeLayout>

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/total_volume_label"
        android:text="@string/total_volume"
        style="@style/form_label"/>

    <RelativeLayout
        android:id="@+id/total_volume_container"
        style="@style/edittext_container">

        <EditText
            android:id="@+id/total_volume"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/total_volume"
            style="@style/space_for_icon_edittext_with_right_padding" />

        <ImageView
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"  />

        <app.fonts.SourceSansProBoldTextView
            android:text="@string/ton"
            style="@style/field_unit_textview" />

    </RelativeLayout>

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/hours_required_per_hectare_label"
        android:text="@string/hours_required_per_hectare"
        style="@style/form_label"/>

    <RelativeLayout
        style="@style/edittext_container">

        <EditText
            android:id="@+id/hours_required_per_hectare"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/hours_required_per_hectare"
            style="@style/space_for_icon_edittext_with_right_padding" />

        <ImageView
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"  />

        <app.fonts.SourceSansProBoldTextView
            android:id="@+id/time_unit_textview"
            android:text="@string/hrs"
            style="@style/field_unit_textview" />

    </RelativeLayout>

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/hire_cost_label"
        android:text="@string/hire_cost"
        style="@style/form_label"/>

    <RelativeLayout
        style="@style/edittext_container">

        <EditText
            android:id="@+id/hire_cost"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/hire_cost"
            style="@style/space_for_icon_edittext_with_right_padding" />

        <ImageView
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"  />

        <app.fonts.SourceSansProBoldTextView
            android:id="@+id/dollar_per_unit"
            android:text="@string/dollar_per_ha"
            style="@style/field_unit_textview" />

    </RelativeLayout>

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/fuel_cost_label"
        android:text="@string/fuel_cost"
        style="@style/form_label"/>

    <RelativeLayout
        android:id="@+id/fuel_container"
        style="@style/edittext_container">

        <EditText
            android:id="@+id/fuel_cost"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/fuel_cost"
            style="@style/space_for_icon_edittext_with_right_padding" />

        <ImageView
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"  />

        <app.fonts.SourceSansProBoldTextView
            android:id="@+id/fuel_unit_textview"
            android:text="@string/dollar_per_km"
            style="@style/field_unit_textview" />

    </RelativeLayout>

    <app.fonts.SourceSansProSemiBoldTextView
        android:id="@+id/minimum_quantity_label"
        android:text="@string/minimum_field_size"
        style="@style/form_label"/>

    <RelativeLayout
        style="@style/edittext_container">

        <EditText
            android:id="@+id/minimum_quantity"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/minimum_field_size"
            style="@style/space_for_icon_edittext_with_right_padding" />

        <ImageView
            android:src="@drawable/pink_arrow"
            style="@style/pink_arrow_field_icon"  />

        <app.fonts.SourceSansProBoldTextView
            android:id="@+id/unit"
            android:text="@string/ha"
            style="@style/field_unit_textview" />

    </RelativeLayout>

</LinearLayout>
