<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/payment_received_400"
            android:layout_gravity="center_horizontal"/>

        <app.fonts.SourceSansProRegularTextView
            android:text="@string/payment_received_by_agrishare"
            style="@style/intro_textview" />

        <app.fonts.SourceSansProRegularTextView
            android:text="@string/your_payment_will_be_held"
            style="@style/caption_textview" />

        <Button
            android:id="@+id/complete_button"
            android:layout_marginTop="16sp"
            android:text="@string/service_complete"
            style="@style/button"/>

    </LinearLayout>

</RelativeLayout>
